<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_insetEdge="none">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/discover_the_movie"
                    android:textColor="#1d162d"
                    android:textSize="30sp" />


                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:background="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_search_black_24dp" />
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <!--<android.support.design.widget.TabLayout
            android:id="@+id/tl_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed"
            app:layout_collapseMode="pin"
            app:tabIndicatorColor="@color/accent" />-->

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_collapseMode="pin"

            >

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/btnNow"
                    style="@style/TabBtnStyle"

                    android:text="@string/now_showing" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/btnPopular"
                    style="@style/TabBtnStyle"

                    android:text="@string/popular_movie" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/btnUpcoming"
                    style="@style/TabBtnStyle"
                    android:text="@string/upcoming_movie" />

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>